<resources>
    <string name="app_name">TicToeToe</string>
    <string name="welcome">WELCOME TO TIC TAC TOE</string>
    <string name="image_grid">grid_description</string>
    <string name="img2">image 2</string>
    <string name="img3">image 3</string>
    <string name="img4">image 4</string>
    <string name="img5">image 5</string>
    <string name="img6">image 6</string>
    <string name="img7">image 7</string>
    <string name="img8">image 8</string>
    <string name="img9">image 9</string>
    <string name="img10">image 10</string>
    <string name="x_turn">X\'s Turn---Tap to play</string>
</resources>